# noah-car-project

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_PROMPT.md  KICKOFF.md  README.md  SLICES.md  SPEC.md  cli.py  config.py  dealers.csv  dealers.py  main.py  noah_prompt.md  output.py  pyproject.toml  requirements.md  research_agent.py  scrape.py  vwdealders_from_noah.txt
.github/workflows/: daily-scrape.yml
data/: dealer_master.csv
scrapers/: agent.py  base.py  tekion.py  xtime.py
scripts/: capture_connect_cdk_fixtures.py  capture_xtime_fixture.py  ci_run.py  discover_platforms.py  run_daily.py  scrape_one.py  sync_drive.py
src/vw_scraper/: __init__.py  alerts.py  http.py  models.py  orchestrator.py  platform_detect.py  registry.py
src/vw_scraper/scrapers/: __init__.py  base.py  connect_cdk.py  xtime.py
src/vw_scraper/storage/: __init__.py  drive.py  timeseries.py
tests/: conftest.py  test_alerts.py  test_ci_run.py  test_discovery_fixtures.py  test_drive.py  test_orchestrator.py  test_platform_detect.py  test_registry.py  test_smoke.py  test_timeseries.py
tests/fixtures/discovery/VW0001/: metadata.json  root.html  schedule_page.html
tests/fixtures/discovery/VW0002/: metadata.json
tests/fixtures/discovery/VW0003/: metadata.json
tests/fixtures/discovery/VW0004/: metadata.json  root.html  schedule_page.html
tests/fixtures/discovery/VW0005/: metadata.json  root.html  schedule_page.html
tests/fixtures/registry/: invalid_platform.csv  malformed_config.csv  mixed_active.csv  valid.csv
tests/scrapers/: test_connect_cdk.py  test_xtime.py
(+16 files in other folders)
