[project]
name = "vw-scraper"
version = "0.1.0"
description = "Scrape VW dealer scheduling systems daily to record oil change availability."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49",
    "polars>=1.17",
    "pyarrow>=18.1",
    "structlog>=24.4",
    "pydantic>=2.10",
    "google-api-python-client>=2.154",
    "google-auth>=2.36",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vw_scraper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: hits real dealer sites; skipped by default, run with `pytest -m live`",
]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src"]
